--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="container">
             <!-- Header Section -->
             <div class="header">
+                <h6 class="text-center">Note: API Key is not integrated here for security reasons.</h6>
                 <h1>Weather App</h1>
                 <div class="weather-input">
                     <input type="text" name="city" id="city_input" placeholder="Enter city name">
